forEnersys/DavePkg/objects/LOB__c.object
<CustomObject>
    <description>Table to manage Line&apos;s of Business (LOBs)</description>
    <fields>
        <fullName>App_Description__c</fullName>
        <description>Ind Truck New, Ind Truck Replc, Mining Car, Rail Signal, Rail Car Lighting New</description>
        <label>App Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <formula>MID(LOB__c, 3, 2)</formula>
        <label>Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dist_Channel_Description__c</fullName>
        <label>Dist. Channel Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <formula>RIGHT(LOB__c, 1)</formula>
        <label>Distribution Channel #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Description_formula__c</fullName>
        <formula>SBU_Description__c &amp;&quot;-&quot;&amp; App_Description__c &amp;&quot;-&quot;&amp; Dist_Channel_Description__c</formula>
        <label>LOB Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Name_Number__c</fullName>
        <formula>Name &amp;&quot; - &quot; &amp; LOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB Name - Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <description>Five digit # assigned to each LOB - Combination of SBU#, Application, and Dist. Channel.</description>
        <externalId>true</externalId>
        <label>LOB #</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBU_Description__c</fullName>
        <description>MPExide, MP General, etc</description>
        <label>SBU (Delete)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBU_Picklist__c</fullName>
        <label>SBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <formula>LEFT(LOB__c, 2)</formula>
        <label>SBU#</label>
        <type>Text</type>
    </fields>
    <label>LOB</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LOB__c</columns>
        <columns>SBU_Picklist__c</columns>
        <columns>SBU__c</columns>
        <columns>Application__c</columns>
        <columns>Distribution_Channel__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SBU_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All LOB&apos;s</label>
    </listViews>
    <listViews>
        <fullName>MP_LOB_s</fullName>
        <columns>NAME</columns>
        <columns>LOB__c</columns>
        <columns>SBU_Picklist__c</columns>
        <columns>SBU__c</columns>
        <columns>Application__c</columns>
        <columns>Distribution_Channel__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBU_Picklist__c</field>
            <operation>equals</operation>
            <value>MP - Americas</value>
        </filters>
        <label>MP - Americas LOB&apos;s</label>
    </listViews>
    <listViews>
        <fullName>RP_LOB_s</fullName>
        <columns>NAME</columns>
        <columns>LOB__c</columns>
        <columns>SBU_Description__c</columns>
        <columns>SBU__c</columns>
        <columns>Application__c</columns>
        <columns>Distribution_Channel__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBU_Picklist__c</field>
            <operation>equals</operation>
            <value>RP - Americas</value>
        </filters>
        <label>RP - Americas LOB&apos;s</label>
    </listViews>
    <nameField>
        <label>LOB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOBs</pluralLabel>
    <recordTypes>
        <fullName>X701_Delaware</fullName>
        <active>true</active>
        <description>One of the three primary Companies within EnerSys</description>
        <label>EnerSys LOB</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>